--- a/examples/complex_graph.html
+++ b/examples/complex_graph.html
@@ -7,7 +7,7 @@
     <script src="https://cdn.jsdelivr.net/npm/c3@0.7.15/c3.min.js"></script>
   </head>
   <body>
-    <div id="chart"></div>
+    <div id="chart" style="max-width:100%;height:auto;"></div>
     <script>
       var chart = c3.generate({
         bindto: '#chart',
