--- a/examples/new_graph.html
+++ b/examples/new_graph.html
@@ -11,7 +11,7 @@
 
 </head>
 <body>
-  <canvas id="graphCanvas" width="312" height="312"></canvas>
+  <canvas id="graphCanvas" style="max-width:100%;height:auto;""></canvas>
   <script>
     function generateCompleteGraph(numNodes, canvas) {
       const ctx = canvas.getContext("2d");
