--- a/examples/new_graph.html
+++ b/examples/new_graph.html
@@ -12,7 +12,7 @@
 
 </head>
 <body>
-  <canvas id="graphCanvas" style="max-width:100%;height:auto;""></canvas>
+  <canvas id="graphCanvas" style="max-width:100%;height:auto;"></canvas>
   <script>
     function generateCompleteGraph(numNodes, canvas) {
       const ctx = canvas.getContext("2d");
