--- a/examples/new_graph.html
+++ b/examples/new_graph.html
@@ -12,7 +12,7 @@
 
 </head>
 <body>
-  <canvas id="graphCanvas"></canvas>
+  <canvas id="graphCanvas"  style="width: '100%'; object-fit: 'contain'";></canvas>
   <script>
     function generateCompleteGraph(numNodes, canvas) {
       const ctx = canvas.getContext("2d");
