--- a/examples/new_graph.html
+++ b/examples/new_graph.html
@@ -5,13 +5,15 @@
   <style>
     canvas {
       border: 1px solid black;
+      width: 100%;
+      object-fit: contain;
     }
   </style>
 <script src="https://thunkable.github.io/webviewer-extension/thunkableWebviewerExtension.js" type="text/javascript"></script>
 
 </head>
 <body>
-  <canvas id="graphCanvas"  style="width: '100%'; object-fit: 'contain'";></canvas>
+  <canvas id="graphCanvas"></canvas>
   <script>
     function generateCompleteGraph(numNodes, canvas) {
       const ctx = canvas.getContext("2d");
