--- a/examples/new_graph.html
+++ b/examples/new_graph.html
@@ -6,6 +6,7 @@
     canvas {
       border: 1px solid black;
       width: 100%;
+      height: 100%;
       object-fit: contain;
     }
   </style>
