--- a/examples/new_graph.html
+++ b/examples/new_graph.html
@@ -7,7 +7,7 @@
       border: 1px solid black;
       width: 100%;
       height: 100%;
-      object-fit: contain;
+      object-fit: cover;
     }
   </style>
 <script src="https://thunkable.github.io/webviewer-extension/thunkableWebviewerExtension.js" type="text/javascript"></script>
