--- a/examples/new_graph.html
+++ b/examples/new_graph.html
@@ -7,7 +7,10 @@
       border: 1px solid black;
       width: 100%;
       height: 100%;
-      object-fit: cover;
+      position: fixed;
+      left: 0;
+      top: 0;
+      z-index: -1;
     }
   </style>
 <script src="https://thunkable.github.io/webviewer-extension/thunkableWebviewerExtension.js" type="text/javascript"></script>
