--- a/examples/new_graph.html
+++ b/examples/new_graph.html
@@ -4,12 +4,8 @@
   <title>Graph Visualization</title>
   <style>
     canvas {
-      border: 1px solid black;
       width: 100%;
-      height: 100%;
-      position: fixed;
-      left: 0;
-      top: 0;
+      vertical-align: middle;
       z-index: -1;
     }
   </style>
