--- a/examples/new_graph.html
+++ b/examples/new_graph.html
@@ -2,18 +2,22 @@
 <html>
 <head>
   <title>Graph Visualization</title>
+ 
+  <script src="https://thunkable.github.io/webviewer-extension/thunkableWebviewerExtension.js" type="text/javascript"></script>
   <style>
-    canvas {
-      width: 100%;
-      vertical-align: middle;
-      z-index: -1;
-    }
-  </style>
-<script src="https://thunkable.github.io/webviewer-extension/thunkableWebviewerExtension.js" type="text/javascript"></script>
-
+      /* Add CSS styles for centering */
+      body {
+          margin: 0;
+          height: 100vh;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+      }
+    </style>
 </head>
 <body>
-  <canvas id="graphCanvas"></canvas>
+  
+  <canvas id="graphCanvas" width="400" height="400"></canvas>
   <script>
     function generateCompleteGraph(numNodes, canvas) {
       const ctx = canvas.getContext("2d");
