--- a/examples/js_web_bridge.html
+++ b/examples/js_web_bridge.html
@@ -1,6 +1,16 @@
+<html>
+  <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://thunkable.github.io/webviewer-extension/thunkableWebviewerExtension.js" type="text/javascript"></script>
+  </head>
+  <body>
+    <h1>Thunkable Web Bridge Test</h1>
+    <p>Send a message from Thunkable to perform an operation.</p>
 
-<script type="text/javascript">
+    <h3>Result:</h3>
+    <p id="response">Waiting for input...</p>
+
+    <script type="text/javascript">
       ThunkableWebviewerExtension.receiveMessageWithReturnValue(function(message, callback) {
         try {
           const msgFromApp = JSON.parse(message);
@@ -39,3 +49,5 @@
         }
       });
     </script>
+  </body>
+</html>
