--- a/examples/js_web_bridge.html
+++ b/examples/js_web_bridge.html
@@ -1,53 +1,36 @@
-<html>
-  <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script src="https://thunkable.github.io/webviewer-extension/thunkableWebviewerExtension.js" type="text/javascript"></script>
-  </head>
-  <body>
-    <h1>Thunkable Web Bridge Test</h1>
-    <p>Send a message from Thunkable to perform an operation.</p>
+<script src="https://thunkable.github.io/webviewer-extension/thunkableWebviewerExtension.js" type="text/javascript"></script>
+<script type="text/javascript">
+  ThunkableWebviewerExtension.receiveMessageWithReturnValue(function(message, callback) {
+    try {
+      // Parse the incoming JSON message from Thunkable
+      const data = JSON.parse(message);
+      let result;
 
-    <h3>Result:</h3>
-    <p id="response">Waiting for input...</p>
-
-    <script type="text/javascript">
-      ThunkableWebviewerExtension.receiveMessageWithReturnValue(function(message, callback) {
-        try {
-          const msgFromApp = JSON.parse(message);
-          let result = null;
-
-          if (msgFromApp.type === "mathOperation") {
-            const num1 = parseFloat(msgFromApp.num1);
-            const num2 = parseFloat(msgFromApp.num2);
-            
-            if (msgFromApp.operation === "add") {
-              result = num1 + num2;
-            } else if (msgFromApp.operation === "subtract") {
-              result = num1 - num2;
-            } else if (msgFromApp.operation === "multiply") {
-              result = num1 * num2;
-            } else if (msgFromApp.operation === "divide") {
-              result = num2 !== 0 ? num1 / num2 : "Error: Division by zero";
-            }
-          } 
-          else if (msgFromApp.type === "isPalindrome") {
-            const str = msgFromApp.string.toLowerCase().replace(/[^a-z0-9]/g, '');
-            result = str === str.split("").reverse().join("");
-          } 
-          else if (msgFromApp.type === "reverseString") {
-            result = msgFromApp.string.split("").reverse().join("");
-          }
-
-          // Send response back to Thunkable
-          callback(String(result));
-
-          // Update HTML for debugging
-          document.getElementById("response").innerText = `Received: ${message} → Result: ${result}`;
-
-        } catch (e) {
-          console.error("Error processing message:", e);
+      // Process based on the requested operation
+      if (data.operation === "toUpperCase") {
+        // Convert the input string to uppercase
+        result = data.string.toUpperCase();
+      } else if (data.operation === "wordCount") {
+        // Count words: trim and split by whitespace
+        result = data.string.trim() === "" ? 0 : data.string.trim().split(/\s+/).length;
+      } else if (data.operation === "randomNumber") {
+        // Generate a random number between 'min' and 'max'
+        const min = parseFloat(data.min);
+        const max = parseFloat(data.max);
+        if (isNaN(min) || isNaN(max) || min >= max) {
+          result = "Invalid parameters";
+        } else {
+          result = (Math.random() * (max - min) + min).toFixed(2);
         }
-      });
-    </script>
-  </body>
-</html>
+      } else {
+        result = "Unknown operation";
+      }
+      
+      // Return the result back to the Thunkable app as a string.
+      callback(String(result));
+    } catch (e) {
+      console.error("Error processing message:", e);
+      callback("Error processing message");
+    }
+  });
+</script>
